# py_load_unitprot

./: .coverage  .gitignore  FRD_COMPLIANCE_ANALYSIS.md  HOW_TO_USE.md  NOTICE  README.md  UNIPROT_DOCUMENTATION.md  config.example.yaml  create_test_data.py  pyproject.toml
.github/workflows/: ci.yml
src/py_load_uniprot/: __init__.py  cli.py  config.py  core.py  db_manager.py  extractor.py  pipeline.py  transformer.py
src/py_load_uniprot/sql/: create_indexes.sql  create_metadata_tables.sql  create_schema.sql
tests/: test_cli.py  test_cli_errors.py  test_config.py  test_core.py  test_core_coverage.py  test_db_manager.py  test_db_manager_coverage.py  test_extractor.py  test_extractor_coverage.py  test_integration.py  test_memory.py  test_transformer.py  test_transformer_coverage.py
