[project]
name = "py_load_unitprot"
version = "0.2.0"
description = "A high-performance Python package for ETL processing of UniProtKB data into relational databases."
authors = [
    {name = "Gowtham Rao", email = "rao@ohdsi.org"},
]
dependencies = ["requests>=2.32.5", "pydantic>=2.11.7", "typer[all]>=0.17.4", "rich>=14.1.0", "pydantic-settings>=2.10.1", "lxml>=5.2.2", "psycopg2-binary>=2.9.9", "pyyaml>=6.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
pytest = "pytest"
lint = "ruff check ."
format = "black ."
types = "mypy src"


[project.scripts]
py_load_unitprot = "py_load_uniprot.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.15.0",
    "testcontainers[postgres]>=4.6.0",
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "black>=24.4.2",
    "types-requests>=2.32.0.20240712",
    "types-PyYAML>=6.0.12.20240712",
]
